--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Me",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "sqlite3": "^5.0.2"
